# mini-game

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  entrypoint.sh  requirements.txt
backend/apps/adminops/: admin.py  apps.py  events.py  models.py  selectors.py  services.py  types.py
backend/apps/chat/: models.py  selectors.py  services.py  urls.py  views.py
backend/apps/games/: apps.py  base.py  default_games.py  errors.py  models.py  registry.py  spi.py  types.py
backend/apps/identities/: api.py  api_urls.py  apps.py  middleware.py  models.py  services.py  views.py
backend/apps/matches/: api.py  api_urls.py  apps.py  consumers.py  errors.py  models.py  routing.py  runtime.py  selectors.py  services.py  urls.py  views.py
backend/apps/rooms/: api.py  api_urls.py  apps.py  consumers.py  errors.py  models.py  realtime.py  routing.py  selectors.py  services.py  urls.py  views.py
backend/config/: asgi.py  settings.py  urls.py
backend/tests/: conftest.py
backend/tests/integration/: test_identities_services.py  test_matches_services.py  test_rooms_services.py  test_vertical_slice.py
docs/: TechnicalDossier.md  TechnicalSpec.md
docs/uml/: README.md
docs/uml/architecture/: 10-game-plugin-component.puml  12-backend-component.puml  16-deployment-runtime.puml  17-package-module-dependencies.puml  18-authoritative-game-state-ownership.puml
docs/uml/data/: 19-er-data-model.puml
docs/uml/domain/: 01-core-domain-class.puml  07-tournament-class.puml
docs/uml/moderation/: 09-authorization-activity.puml  11-chat-visibility-scope.puml
docs/uml/sequences/: 05-room-create-join-reconnect-sequence.puml  06-connect-four-match-sequence.puml  13-reconnect-recovery-sequence.puml  14-host-transfer-sequence.puml  15-tournament-progression-sequence.puml  20-proposal-vote-sequence.puml  23-admin-moderation-sequence.puml  24-stats-event-ingestion.puml  25-chat-posting-visibility-filtering-sequence.puml
docs/uml/states/: 02-room-state.puml  03-participant-state.puml  04-match-state.puml  08-tournament-state.puml  21-proposal-state.puml  22-chat-message-state.puml
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  api.ts  main.ts
frontend/src/assets/: main.css
frontend/src/components/: BottomNav.vue  ToastStack.vue
frontend/src/composables/: useMatchSocket.ts  useRoomSocket.ts
frontend/src/router/: index.ts
frontend/src/screens/: AuthScreen.vue  HomeScreen.vue  MatchScreen.vue  ProfileScreen.vue  (+2 more)
frontend/templates/: base.html
scripts/: bootstrap_uml_docs.py  scaffold_django_app.py
(+43 files in other folders)
