[project]
name = "mini-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.3",
    "psycopg[binary]>=3.3.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 88
target-version = "py312"
force-exclude = true
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "migrations",
  "staticfiles",
  "manage.py",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["backend"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
