[project]
name = "mini-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "channels[daphne]>=4.3.2",
    "django>=6.0.3",
    "django-cors-headers>=4.9.0",
    "django-stubs>=6.0.1",
    "mypy>=1.19.1",
    "psycopg[binary]>=3.3.3",
    "types-channels>=4.3.0.20260321",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 88
target-version = "py312"
force-exclude = true
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "migrations",
  "staticfiles",
  "manage.py",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["backend"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]

files = ["backend"]
mypy_path = ["backend"]

strict = true

warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
show_error_codes = true
pretty = true

exclude = [
  "^frontend/",
  "^docs/",
  "^scripts/",
  "^\\.venv/",
  "^venv/",
  "^node_modules/",
  "^backend/.*/migrations/.*$",
]

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "backend.tests.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "backend.config.settings"
strict_settings = false
